--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,7 +66,8 @@
         "no-underscore-dangle": 0,
         "no-prototype-builtins": 0,
         "import/no-named-as-default": 0,
-        "react/prefer-stateless-function": 0
+        "react/prefer-stateless-function": 0,
+        "react/no-multi-comp": 0
     },
     "parser": "babel-eslint"
 }
