--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-react": "^7.12.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-highlight.js": "^1.0.7",
+    "react-syntax-highlighter": "^10.1.2",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.3"
   },
